--- a/AsynchronousProgramming.DotnetCore.ConsonleApp/AsynchronousProgramming.DotnetCore.ConsonleApp.csproj
+++ b/AsynchronousProgramming.DotnetCore.ConsonleApp/AsynchronousProgramming.DotnetCore.ConsonleApp.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AsynchronousProgramming.Standard.Library\AsynchronousProgramming.Standard.Library.csproj" />
+  </ItemGroup>
+
 </Project>
